# nucleo_quickstart

./: Cargo.toml  Cargo_ignition4.toml  Cargoignition5.toml  Cargoignition9.toml  README.md  memory.x  openocd.cfg  openocd.gdb
.cargo/: config.toml
docs/: prerequisites.md
examples/: blinky.rs
