[package]
name = "embedded_ml"
version = "0.1.0"
edition = "2021"
readme = "README.md"

[dependencies]
panic-halt = "0.2"
cortex-m = "0.7.4"
cortex-m-rt = "0.7.3"
stm32l4xx-hal = { version = "0.7.1", features = ["rt", "stm32l4x2"] }

# dev
panic-semihosting = "0.5"
cortex-m-semihosting = "0.3"

# cortex-m-rtic = "1.1.4"