[package]
name = "nucleo_quickstart"
version = "0.1.0"
edition = "2021"
readme = "README.md"

[dependencies]
panic-halt = "0.2"
cortex-m = "0.7.4"
cortex-m-rt = "0.7.3"
stm32l4xx-hal = { version = "0.7.1", features = ["rt", "stm32l432"] }

# dev
panic-semihosting = "0.5"
cortex-m-semihosting = "0.3"